--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Solaris-SMF
 
+0.03_01	7 December 2009
+    Added 'maintenance' state to the tests.
+
 0.03	2 December 2009
 	Radically revised - it now does what it says on the tin! Unnecessary
     dependencies removed as well.
