--- a/Changes
+++ b/Changes
@@ -1,15 +1,19 @@
 Revision history for Solaris-SMF
 
+0.04	24 January 2010
+	Services may now be enabled and disabled, provided you are running
+	as a user with appropriate privileges.
+
 0.03_01	7 December 2009
-    Added 'maintenance' state to the tests.
+	Added 'maintenance' state to the tests.
 
 0.03	2 December 2009
 	Radically revised - it now does what it says on the tin! Unnecessary
-    dependencies removed as well.
+	dependencies removed as well.
 
 0.02	1 December 2009
 	Updated prerequisites to add 'Readonly' support.
 
-0.01    28 November 2009
-    First version, released on an unsuspecting world.
+0.01	28 November 2009
+	First version, released on an unsuspecting world.
 
